<resources>
    <string name="app_name">YoMusic</string>
    <string name="app_description">PLAY THE MOMENTS</string>

    <!--MenuItems -->
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="action_share">Share</string>
    <string name="action_details">Details</string>
    <string name="action_delete">Delete from device</string>
    <string name="action_set_ringtone">Set As Ringtone</string>
    <string name="action_sleep_timer">Sleep Timer</string>
    <string name="action_rename">Rename</string>
    <string name="action_search">Search</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="filter">Filter</string>
    <string name="new_playlist">Playlists</string>
    <string name="ringtone_set">Ringtone Set</string>
    <string name="title_activity_settings">Settings</string>

    <!--NavigationDrawerActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="last_played_song">Last Played Song</string>
    <string name="played_upto_length">Length</string>

    <!-- Strings related to Settings -->

    <!-- Strings related to Audio Focus Settings -->
    <string name="title_monitor_audio_focus">Monitor Audio Focus Changes</string>
    <string name="monitor_audio_focus">monitor_audio_focus_changes</string>
    <string name="summary_monitor_audio_focus">Reduce volume on focus loss\n(Notification, Games,etc)</string>

    <!-- Strings related to Ignore Short Tracks Settings -->
    <string name="ignore_short_tracks">ignore_short_tracks</string>
    <string name="title_ignore_short_tracks">Ignore Short Tracks</string>
    <string name="summary_ignore_short_tracks">Less than 60 seconds (Notifications,etc)</string>

    <!-- Strings related to Music Folders Settings -->
    <string name="music_folders">music_folders</string>
    <string name="title_music_folders">Music Folders</string>
    <string name="summary_music_folders_old">Select folders to be used for library</string>
    <string name="summary_music_folders_new">Selected %d out of %d folders to be used for music library</string>

    <!-- Strings related to Filter Music Settings -->
    <string name="filter_music">filter_music</string>
    <string name="title_filter_music">Filter Music</string>
    <string name="summary_filter_music">Enable switch to filter music based on (Name, extension)</string>

    <!-- Strings related to Filter By Name Settings -->
    <string name="filter_by_name">filter_by_name</string>
    <string name="title_filter_by_name">Filter By Name</string>
    <string name="dailog_title_filter_by_name">Filter By Name</string>
    <string name="dailog_mssage_filter_by_name">Enter Name(s) separated by \',\'</string>

    <!-- Strings related to Filter By Extension Settings -->
    <string name="filter_by_extension">filter_by_extension</string>
    <string name="title_filter_by_extension">Filter By Extension</string>
    <string name="dailog_title_filter_by_extension">Filter By Extension</string>
    <string name="dailog_mssage_filter_by_extension">Enter Extension(s) separated by \',\'</string>

    <!-- Strings related to Sleep Timer Settings -->
    <string name="sleep_timer">sleep_timer</string>
    <string name="sleep_time_remaining">sleep_time_remaining</string>
    <string name="title_sleep_timer">Set Sleep Timer</string>
    <string name="summary_sleep_timer">off</string>
    <string name="summary_about">This music player is still in its development phase</string>

    <!-- Strings related to About Musify Settings -->
    <string name="app_version">1.2</string>
    <string name="title_version">Version</string>

    <!-- Strings related to LogOut Settings -->
    <string name="log_out">log_out</string>
    <string name="title_log_out">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tLOGOUT</string>


    <string-array name="pref_sleep_timer_entries">
        <item>"Sleep timer off"</item>
        <item>"After 2 minutes"</item>
        <item>"After 10 minutes"</item>
        <item>"After 20 minutes"</item>
        <item>"After 30 minutes"</item>
        <item>"After 60 minutes"</item>
        <item>"Custom"</item>
    </string-array>

    <string-array name="pref_sleep_timer_values">
        <item>"00"</item>
        <item>"2</item>
        <item>"10"</item>
        <item>"20"</item>
        <item>"30"</item>
        <item>"60"</item>
        <item>"0"</item>
    </string-array>

    <string-array name="pref_music_folders_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <!-- Strings related to PlayerActivity -->

    <!-- Strings related to Shuffle -->
    <string name="shuffle_music">Shuffle</string>
    <!-- Strings related to Repeat -->
    <string name="repeat_music">Repeat</string>


    <!--LoginActivity -->
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>


</resources>
