<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_add_favourite"
        android:orderInCategory="101"
        android:title="@string/action_add_favourite" />

    <item
        android:id="@+id/action_set_ringtone"
        android:orderInCategory="102"
        android:title="@string/action_set_ringtone" />


    <item
        android:id="@+id/action_rename"
        android:orderInCategory="103"
        android:title="@string/action_rename"/>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"/>

</menu>