<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search_custom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/action_add_favourite"
        android:orderInCategory="100"
        android:title="@string/action_add_favourite" />

    <item
        android:id="@+id/action_play_next"
        android:orderInCategory="101"
        android:title="@string/action_play_next" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:title="@string/action_share" />

    <item
        android:id="@+id/action_details"
        android:orderInCategory="103"
        android:title="@string/action_details"/>

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="104"
        android:title="@string/action_delete"/>
</menu>